Fix scrolling overlap when modal is open

--- a/src/App.css
+++ b/src/App.css
@@ -79,3 +79,7 @@
 .map-link.mobile {
   text-decoration: underline;
 }
+
+.ReactModal__Body--open {
+  overflow: hidden;
+}
